# NNs-and-Deep-Learning

./: .gitignore  .nojekyll  README.html  README.md  _quarto.yml  chap1.ipynb  chap1.md  chap3.md  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
experiments/: base.py  chap1-no_hidden_layer-MSE_loss.ipynb  chap1-single_hidden_layer.ipynb  chap3-no_hidden_layer-CE_loss.ipynb  data.py  dataset.ipynb  digit_classifier.py  helpers.py
experiments/classifier/: chap1-no_hidden_layer-MSE_loss.html  chap1-single_hidden_layer.ipynb  dataset.ipynb
experiments/cnn/: cnn.py  train.py
experiments/flow_matching/: cfm.py  datasets.ipynb  vis_flow.ipynb
experiments/latent-space/: train.ipynb  visualise.ipynb
experiments/resnet/: feature_extraction.py  resnet.py
experiments/vae/: inference.ipynb  sample.py  train.py  vae.py
experiments/vae/vis/: class_latents.ipynb
notes/: 1-NNs_Intro.html  2 Backpropogation.md  2-Backpropagation.html  2-Backpropagation.md  3 Improving Learning.md  3-Improving_Learning.html  3-Improving_Learning.md  NNs-intro.md  VAE.html  VAE.md  backpropogation.md  chap1.md  chap2.md  chap3.md  composition.html  composition.md
site_libs/bootstrap/: bootstrap-2fd201b856bd247fb79ba48b3f7323be.min.css  bootstrap-dark-05013c58f41773649a02e0b95a32a956.min.css
